[workspace]
resolver = "2"
members = ["tis-grabber-sys"]

[workspace.package]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MiyakoMeow/tis-grabber-rs"
repository = "https://github.com/MiyakoMeow/tis-grabber-rs"
keywords = ["ffi", "camera", "video", "windows"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "hardware-support",
    "multimedia::video",
    "os::windows-apis",
]

[workspace.dependencies]
bindgen = ">=0.70.1,<1"
once_cell = ">=1.20.2,<2"
